--- a/Main/Application/templates/Application/home.html
+++ b/Main/Application/templates/Application/home.html
@@ -12,10 +12,11 @@
         <img class="search-img5" src="{% static 'images/cloud.png' %}" alt="">
         <img class="search-img6" src="{% static 'images/question.png' %}" alt="">
         <h1 class="search-heading">Ask Your <span>Doubt</span> Now?</h1>
-        <form class="search-form" action="" style="position: relative;">
+        <form class="search-form" action="" style="position: relative;" method="POST">
+            {% csrf_token %}
             <div class="search">
                 <img class="search__magnify" src="{% static 'images/search.png' %}" alt="">
-                <input class="search__box" type="text" placeholder="Search Questions, Doubts & Images">
+                <input class="search__box" type="text" name="search" placeholder="Search Questions, Doubts & Images">
                 <div class="search__camera">
                     <img class="search__camera--item" src="{% static 'images/camera.png' %}" alt="">
                     <h5 class="search__camera--text">upload image</h5>
@@ -34,8 +35,9 @@
                 <li class="search__languages--item"><button class="search__languages--item-btn">Punjabi</button></li>
                 <li class="search__languages--item"><button class="search__languages--item-btn">Odia</button></li>
             </ul>
+            <button class="search__btn" type="submit" name="submit" value="search">Search Doubt</button>
         </form>
-        <button class="search__btn">Search Doubt</button>
+        
     </section>
     <div class="search-chips">
         <div class="search-chips--img">
