--- a/Main/Application/templates/Application/question.html
+++ b/Main/Application/templates/Application/question.html
@@ -52,7 +52,7 @@
 
             <div class="viewed">
                 <h1 class="viewed__heading">Most Viewed <span>Questions</span> </h1>
-                <dir class="viewed__content">
+                <div class="viewed__content">
                     <button class="viewed__content--back"><</button>
                     <div class="chips">
                         <div class="chips__box">
