--- a/Main/Application/templates/Application/result.html
+++ b/Main/Application/templates/Application/result.html
@@ -2,6 +2,16 @@
 {% load static %}
 
 {% block content %}
+    <div class="search" style="margin-top: 7rem;">
+        <input class="search__box" type="text" placeholder="Search Questions, Doubts & Images">
+        <input class="search__box1" type="text" placeholder="Search">
+        <div class="search__camera">
+            <img class="search__camera--item" src="{% static 'images/camera.png' %}" alt="">
+            <h5 class="search__camera--text">upload image</h5>
+            <img class="search__camera--button" src="{% static 'images/arrow.png' %}">
+            <button class="search__btn"><img class="search__btn-img" src="{% static 'images/arrow.png' %}" alt=""></button>
+        </div>
+    </div>
     <section id="section-result" class="container-fluid">
         <img class="result-ellipse1" src="{% static 'images/ellipses.png' %}" alt="">
         <div>
