--- a/Main/static/main.css
+++ b/Main/static/main.css
@@ -104,7 +104,8 @@ body {
       font-weight: 400;
       color: #4B4B4B; }
     .answer__content--box-img {
-      width: 100%; }
+      width: 100%;
+      height: 25rem; }
   .answer__solved {
     margin-top: 5rem; }
     .answer__solved--box {
@@ -4357,7 +4358,8 @@ nav {
     margin-bottom: 1rem; }
   .filter__items {
     display: grid;
-    grid-template-columns: repeat(10, max-content);
+    grid-template-columns: repeat(auto-fit, 9rem);
+    row-gap: 2rem;
     column-gap: 2rem; }
     .filter__items--btn {
       background-color: transparent;
@@ -4375,6 +4377,7 @@ nav {
 
 .result-img1 {
   width: 100%;
+  height: 23rem;
   align-self: end;
   margin-bottom: -4rem;
   cursor: pointer;
