--- a/Main/Application/templates/Application/join.html
+++ b/Main/Application/templates/Application/join.html
@@ -13,10 +13,7 @@
             <img class="join__img" src="{% static 'images/group.jpg' %}" alt="">
             <div class="join__content">
                 <h2 class="join__content--title">Join Us at <span>Coursify</span></h2>
-                <h4 class="join__content--sub"><img class="join__content--sub-img" src="{% static 'images/tick.png' %}" alt="">  Join a growing Startup</h4>
-                <h4 class="join__content--sub"><img class="join__content--sub-img" src="{% static 'images/tick.png' %}" alt="">  Create an impact in the Team</h4>
-                <h4 class="join__content--sub"><img class="join__content--sub-img" src="{% static 'images/tick.png' %}" alt="">  display your Achievements</h4>
-                <h4 class="join__content--sub"><img class="join__content--sub-img" src="{% static 'images/tick.png' %}" alt="">  Boost your Career Growth</h4>
+                <h4 class="join__content--sub"> <span style="margin-right: 1rem;">>></span>  Join a growing Startup</h4>
                 <h4 class="join__content--sub"> <span style="margin-right: 1rem;">>></span>  Create an impact in the Team</h4>
                 <h4 class="join__content--sub"> <span style="margin-right: 1rem;">>></span>  display your Achievements</h4>
                 <h4 class="join__content--sub"> <span style="margin-right: 1rem;">>></span>  Boost your Career Growth</h4>
