--- a/Main/static/main.css
+++ b/Main/static/main.css
@@ -105,7 +105,9 @@ body {
       color: #4B4B4B; }
     .answer__content--box-img {
       width: 100%;
-      height: 25rem; }
+      height: 25rem;
+      position: relative;
+      bottom: 0rem; }
   .answer__solved {
     margin-top: 5rem; }
     .answer__solved--box {
@@ -165,11 +167,12 @@ body {
             border: none;
             background-color: #D60B3C;
             color: white;
+            width: fit-content;
             padding: .2rem 2rem;
             border-radius: .5rem;
             position: absolute;
             bottom: -1rem;
-            left: 50%;
+            left: 51%;
             transform: translateX(-50%); }
           .answer__solved--box--books-pic-text {
             position: absolute;
@@ -181,6 +184,69 @@ body {
             font-family: 'Poppins',sans-serif;
             font-weight: 700;
             color: #1E4190; }
+
+@media only screen and (max-width: 70em) {
+  .answer__content--box-img {
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%); }
+  .answer__solved--box--books-pic-btn {
+    padding: .2rem 1rem; } }
+
+@media only screen and (max-width: 50em) {
+  .answer__content--box {
+    grid-template-columns: 100%; }
+    .answer__content--box-img {
+      margin-top: 1rem;
+      width: 90%;
+      justify-self: center; }
+  .answer__solved--box {
+    width: 100%;
+    margin-left: 4rem; }
+    .answer__solved--box--books-pic-btn {
+      padding: .2rem .5rem;
+      font-size: 1.3rem; }
+    .answer__solved--box--books-pic-text {
+      font-size: 1.3rem;
+      text-align: center;
+      transform: translate(-50%, 1rem); } }
+
+@media only screen and (max-width: 37.5em) {
+  .answer__content--box {
+    grid-template-columns: 100%; }
+    .answer__content--box-img {
+      margin-top: 1rem;
+      width: 100%;
+      justify-self: center; }
+  .answer__solved--box {
+    margin-left: 2rem !important;
+    width: 110%;
+    margin-top: 2rem; }
+    .answer__solved--box--books {
+      grid-template-columns: 100%; }
+      .answer__solved--box--books-pic-btn {
+        font-size: 1.5rem;
+        padding: .3rem 2rem; } }
+
+@media only screen and (max-width: 30em) {
+  .answer__solved--box {
+    margin-top: 4rem; }
+    .answer__solved--box-heading {
+      font-size: 1.5rem; }
+    .answer__solved--box-items {
+      grid-template-columns: repeat(2, 1fr);
+      column-gap: 1rem;
+      row-gap: 1rem; }
+      .answer__solved--box-items-btn {
+        padding: .5rem;
+        font-size: 1.3rem; }
+    .answer__solved--box--books {
+      grid-template-columns: 100%; }
+      .answer__solved--box--books-pic-btn {
+        font-size: 1.2rem;
+        padding: .3rem .4rem; }
+      .answer__solved--box--books-pic-text {
+        transform: translate(-50%, 0.1rem); } }
 
 .board-heading {
   text-align: center;
@@ -1612,14 +1678,14 @@ body {
     .find__or--line1 {
       position: absolute;
       border: 0.15rem solid #D60B3C;
-      width: 40rem;
+      width: 41%;
       background-color: #D60B3C;
       left: 3rem;
       top: 0rem; }
     .find__or--line2 {
       position: absolute;
       border: 0.15rem solid #D60B3C;
-      width: 40rem;
+      width: 41%;
       background-color: #D60B3C;
       right: 3rem;
       top: 0rem; }
@@ -1647,7 +1713,7 @@ body {
       font-size: 2rem; }
     .find__items--box {
       display: grid;
-      grid-template-columns: repeat(10, 1fr);
+      grid-template-columns: repeat(auto-fit, 7.7rem);
       column-gap: 1rem; }
       .find__items--box-btn {
         margin-top: 1rem;
@@ -1684,6 +1750,26 @@ body {
   position: absolute;
   z-index: -1;
   bottom: -30rem; }
+
+@media only screen and (max-width: 50em) {
+  .find__or--line1 {
+    width: 36%; }
+  .find__or--line2 {
+    width: 36%; } }
+
+@media only screen and (max-width: 37.5em) {
+  .find__or--line1 {
+    width: 30%; }
+  .find__or--line2 {
+    width: 30%; }
+  .find__heading {
+    font-size: 2.3rem; }
+  .find__sub {
+    font-size: 1.6rem; }
+  .find__btn {
+    font-size: 2rem; }
+  .find__items--heading {
+    text-align: center; } }
 
 .footer1-connect {
   margin-bottom: 4rem; }
@@ -4358,9 +4444,9 @@ nav {
     margin-bottom: 1rem; }
   .filter__items {
     display: grid;
-    grid-template-columns: repeat(auto-fit, 9rem);
+    grid-template-columns: repeat(auto-fit, 8.4rem);
     row-gap: 2rem;
-    column-gap: 2rem; }
+    column-gap: 1rem; }
     .filter__items--btn {
       background-color: transparent;
       font-size: 1.5rem;
@@ -4384,6 +4470,27 @@ nav {
   transition: all .2s; }
   .result-img1:hover {
     transform: translateY(-1rem); }
+
+@media only screen and (max-width: 70em) {
+  .sear {
+    margin-top: 20rem !important; } }
+
+@media only screen and (max-width: 50em) {
+  .result {
+    position: relative;
+    grid-column: 1 / 3;
+    grid-row: 2 / 3; }
+  .result-img1 {
+    margin-top: -2rem;
+    grid-row: 1 / 2;
+    grid-column: 1 / 3;
+    position: relative;
+    width: 65%;
+    justify-self: center; }
+  .result-heading {
+    text-align: center; }
+  .result-subheading {
+    text-align: center; } }
 
 .say-heading {
   text-align: center;
@@ -6070,6 +6177,12 @@ nav {
   display: grid;
   grid-template-columns: 68% 32%;
   margin-left: 7rem; }
+
+@media only screen and (max-width: 50em) {
+  #section-result {
+    margin-left: 0rem; }
+  #section-answer {
+    margin-left: 0rem; } }
 
 #section-drop {
   margin-top: 5rem;
