--- a/Main/Application/templates/Application/home.html
+++ b/Main/Application/templates/Application/home.html
@@ -42,6 +42,13 @@
                 <li class="search__languages--item"><button class="search__languages--item-btn">Odia</button></li>
             </ul>
         </form>
+       <script type="text/javascript">
+            $("#pass").keyup(function(event) { 
+                if (event.keyCode === 13) { 
+                    $("#Search_Button").click(); 
+                } 
+            }); 
+        </script>
     </section>
     <div class="search-chips">
         <div class="search-chips--img">
