--- a/Main/Application/templates/Application/question.html
+++ b/Main/Application/templates/Application/question.html
@@ -10,9 +10,19 @@
         <div class="question">
             <h1 class="question__heading">Class 9th > Maths > NCERT > <span>Chapter 1</span></h1>
             <h3 class="question__subheading">Exercise 1.1 > <span>Question 2</span> </h3>
-            <p class="question__para">If the polynomials az3 + 4z2 + 3z -4 and z3 - 4z + a leave the same remainder when divided by z - 3, find the value of a</p>
+            <p class="question__para">{{title}}</p>
             <div class="question__content">
-                <img class="question__content--img" src="{% static 'images/tablet.png' %}" alt="">
+                <!-- <img class="question__content--img" src="{% static 'images/tablet.png' %}" alt=""> -->
+                <div class="card" style="width: 70%; height: 240%; border-radius: 2%;">
+                    <iframe style="padding: 4% 6% 4% 6%; height:100%;" class="bd-placeholder-img card-img-top rounded"  src="{{link}}?modestbranding=0;" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<!--                 <div class="container">
+                    <img class="bd-placeholder-img card-img-top" width="100%" height="50%" style="padding: 6% 8% 6% 8%;" src="{{ t }}" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail">
+                    <i class="fas fa-play-circle" style="color: #DE0B38; font-size: 1040%"></i>
+                </div>          -->
+                </div>
+                
+                <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+                
                 <div class="question__content--icon">
                     <div class="question__content--icon-eye">
                         <img class="question__content--icon-eye-img" src="{% static 'images/eye.png' %}" alt="">
