--- a/Main/static/main.css
+++ b/Main/static/main.css
@@ -736,7 +736,8 @@ body {
       grid-template-columns: min-content 90%;
       grid-template-rows: repeat(2, min-content);
       column-gap: 2rem;
-      grid-template-areas: 'img head' 'img sub'; }
+      grid-template-areas: 'img head'
+ 'img sub'; }
       .course__box--content-img {
         grid-area: img;
         width: 7.5rem;
@@ -808,7 +809,8 @@ body {
   display: grid;
   grid-template-columns: 50% 50%;
   grid-template-rows: repeat(2, 1fr);
-  grid-template-areas: 'text comp' 'work work';
+  grid-template-areas: 'text comp'
+ 'work work';
   position: relative; }
   .doubts__img {
     grid-area: comp;
@@ -826,7 +828,8 @@ body {
       margin-left: -10rem;
       grid-template-columns: 15% 85%;
       grid-template-rows: repeat(2, min-content);
-      grid-template-areas: 'img head' 'img sub'; }
+      grid-template-areas: 'img head'
+ 'img sub'; }
       .doubts__box--content-img {
         margin-top: .5rem;
         grid-area: img;
@@ -1126,7 +1129,8 @@ body {
       grid-template-columns: min-content 90%;
       grid-template-rows: repeat(2, min-content);
       column-gap: 2rem;
-      grid-template-areas: 'img head' 'img sub'; }
+      grid-template-areas: 'img head'
+ 'img sub'; }
       .embark__box--content-img {
         grid-area: img;
         width: 5.5rem;
@@ -1522,7 +1526,8 @@ body {
       position: relative;
       grid-template-columns: 27% 63%;
       grid-template-rows: repeat(2, max-content);
-      grid-template-areas: 'img para' 'img text'; }
+      grid-template-areas: 'img para'
+ 'img text'; }
       .expert__content--box-img {
         grid-area: img;
         height: 12rem;
@@ -1587,7 +1592,9 @@ body {
 @media only screen and (max-width: 30em) {
   .expert__content--box {
     grid-template-columns: 100%;
-    grid-template-areas: 'img' 'para' 'text'; }
+    grid-template-areas: 'img'
+ 'para'
+ 'text'; }
     .expert__content--box-para {
       text-align: center; } }
 
@@ -2396,7 +2403,8 @@ body {
         display: grid;
         grid-template-columns: 10% 90%;
         column-gap: 2rem;
-        grid-template-areas: 'img tit' 'img para'; }
+        grid-template-areas: 'img tit'
+ 'img para'; }
         .jee .reading__content--sub-icon {
           align-self: start;
           grid-area: img;
@@ -3077,7 +3085,8 @@ body {
       display: grid;
       grid-template-columns: repeat(2, max-content);
       grid-template-rows: repeat(2, min-content);
-      grid-template-areas: 'img head' 'img sub'; }
+      grid-template-areas: 'img head'
+ 'img sub'; }
       .live__box--content-img {
         grid-area: img;
         width: 50%;
@@ -3144,7 +3153,9 @@ body {
   .live__box--content {
     grid-template-columns: 100%;
     justify-items: center;
-    grid-template-areas: 'img img' 'head head' 'sub sub'; }
+    grid-template-areas: 'img img'
+ 'head head'
+ 'sub sub'; }
     .live__box--content-img {
       width: 6rem;
       height: 6rem;
@@ -3158,7 +3169,9 @@ body {
 @media only screen and (max-width: 30em) {
   .live__box--content {
     grid-template-columns: 100%;
-    grid-template-areas: 'img img' 'head head' 'sub sub'; }
+    grid-template-areas: 'img img'
+ 'head head'
+ 'sub sub'; }
     .live__box--content-img {
       width: 6rem;
       height: 6rem;
@@ -5667,7 +5680,8 @@ nav {
       display: grid;
       grid-template-columns: min-content 90%;
       grid-template-rows: repeat(2, min-content);
-      grid-template-areas: 'img head' 'sub sub'; }
+      grid-template-areas: 'img head'
+ 'sub sub'; }
       .video__box--content-img {
         grid-area: img;
         width: 6rem;
@@ -5742,7 +5756,8 @@ nav {
   .video__box--content {
     justify-items: center;
     grid-template-columns: 100%;
-    grid-template-areas: 'img' 'head'; }
+    grid-template-areas: 'img'
+ 'head'; }
   .video__box--btn {
     margin-top: 2rem; } }
 
@@ -5889,7 +5904,8 @@ nav {
       column-gap: 1.5rem;
       grid-template-rows: repeat(2, min-content);
       align-self: center;
-      grid-template-areas: 'img title' 'img para'; }
+      grid-template-areas: 'img title'
+ 'img para'; }
       .why__content--box-img {
         grid-area: img;
         width: 7rem;
@@ -5953,7 +5969,9 @@ nav {
     margin-bottom: 3rem; }
   .why__content--box {
     grid-template-columns: 100%;
-    grid-template-areas: 'img' 'title' 'para';
+    grid-template-areas: 'img'
+ 'title'
+ 'para';
     width: 100% !important;
     justify-items: center !important; }
     .why__content--box:nth-child(3) {
@@ -6188,3 +6206,26 @@ nav {
   margin-top: 5rem;
   position: relative;
   height: 100vh; }
+
+.container {
+    position: relative;
+    width: 100%;
+  }
+  
+  /* Make the image responsive */
+  .container img {
+    display: block;
+    position: relative;
+  }
+  
+  /* Style the button and place it in the middle of the container/image */
+  .container i {
+    position: absolute;
+    top: 30%;
+    left: 40%;
+    align-content: center;
+  }
+  
+  .container i:hover {
+    color: black;
+  }
